no selection highlight in edit mode when using "hidden wire" #47003

Closed
opened 2015-12-17 12:22:34 +01:00 by Daniel Bystedt · 10 comments
Member

System Information
Operating system and graphics card
windows 64 bit
NVIDIA GeForce GTX 780

Blender Version
Broken: blender-2.76.0-git.d970f02-AMD64
Worked: (optional)

Short description of error
There is no selection highlighting of vertecies or edges when i turn on "hidden wire" in the right sided menu in the 3d view (shading section) when in edit mode.

It seems like non selected edges and selection are drawn with the same color (light blue). When selecting a face I can see that it is "shaded" but in the same color as non selected edges.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
hidden wire not working.blend

**System Information** Operating system and graphics card windows 64 bit NVIDIA GeForce GTX 780 **Blender Version** Broken: blender-2.76.0-git.d970f02-AMD64 Worked: (optional) **Short description of error** There is no selection highlighting of vertecies or edges when i turn on "hidden wire" in the right sided menu in the 3d view (shading section) when in edit mode. It seems like non selected edges and selection are drawn with the same color (light blue). When selecting a face I can see that it is "shaded" but in the same color as non selected edges. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps [hidden wire not working.blend](https://archive.blender.org/developer/F268686/hidden_wire_not_working.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt

#47004 was marked as duplicate of this issue

#47004 was marked as duplicate of this issue
Member

Added subscriber: @wevon-2

Added subscriber: @wevon-2

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by 147f7a1e86

Caused by 147f7a1e86
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Brecht Van Lommel was assigned by Julian Eisel 2015-12-21 16:53:34 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by 071a69fc95

This issue was referenced by 071a69fc95791ffea52f394f5de25518b5b8302f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47003
No description provided.