Fix T47003: OpenGL draw missing selection highlight when using hidden wire.